<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="name">Name</string>

    <!--Header text for the list of toppings [CHAR LIMIT=20]-->
    <string name="toppings">Toppings</string>

    <!--Text for whipped cream toppings [CHAR LIMIT=NONE]-->
    <string name="whipped_cream">Whipped cream</string>

    <!--Text for chocolate toppings [CHAR LIMIT=NONE]-->
    <string name="chocolate">Chocolate</string>

    <!--Header text for the quantity. [CHAR LIMIT=20]-->
    <string name="quantity">Quantity</string>


    <!--    Thank you message for the order summary. [CHAR LIMIT=NONE]-->
    <string name="thank_you">Thank You!</string>

    <string name="order_summary_name">Name: <xliff:g example="Amy" id="name">%s</xliff:g> </string>
</resources>